tests/js/valid/if/tag-unions-returns.buri
result = if #true do
    #some(1)
else
    #none

result2 = when result is
    #some(num) do 1
    #none do 2