tests/js/invalid/if/none-conditional.buri
result = if #none do "hello"